[gd_scene load_steps=5 format=3]

[ext_resource type="Texture2D" uid="uid://dx46i1jk4hllc" path="res://Graphics/Sprites/Gimmicks/sprPhysicsBox.png" id="1_2ygja"]
[ext_resource type="Script" path="res://Scripts/Gimmicks/scrPhysicsBox.gd" id="1_5iuux"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_curtd"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bcpjk"]
size = Vector2(16, 32)

[node name="objPhysicsBox" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
lock_rotation = true
script = ExtResource("1_5iuux")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2ygja")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-16, -16, -16, 0, -14, 8, -8, 14, 0, 16, 8, 14, 14, 8, 16, 0, 16, -16)

[node name="ColliderLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColliderLeft"]
position = Vector2(-24, 0)
shape = SubResource("RectangleShape2D_curtd")

[node name="ColliderRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColliderRight"]
position = Vector2(24, 0)
shape = SubResource("RectangleShape2D_bcpjk")

[connection signal="body_entered" from="ColliderLeft" to="." method="_on_collider_left_body_entered"]
[connection signal="body_exited" from="ColliderLeft" to="." method="_on_collider_left_body_exited"]
[connection signal="body_entered" from="ColliderRight" to="." method="_on_collider_right_body_entered"]
[connection signal="body_exited" from="ColliderRight" to="." method="_on_collider_right_body_exited"]
